--- a/api_gateway/Dockerfile
+++ b/api_gateway/Dockerfile
@@ -8,7 +8,7 @@ WORKDIR /PROGETTO
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy the current directory contents into the container at /app
+# Copy the current directory contents into the container at /PROGETTO
 COPY . .
 
 # Expose the necessary port
