ora funziona il collegamento. da sistemare docker per non dover sempre eseguire comando docker exec -i db mysql -uroot -proot_password ./db/ase.sql

--- a/src/docker-compose.yaml
+++ b/src/docker-compose.yaml
@@ -77,7 +77,8 @@ services:
       - DB_HOST=db
       - DB_USER=root
       - DB_PASSWORD=root_password
-      - DB_NAME=mydatabase
+      - DB_NAME=ase
+      - PYTHONUNBUFFERED=1
 
   db:
     image: mysql:8.0
