--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 /venv/
+/mysql-data
 /src/mysql-data
+/src/db_manager/utils.py
+/src/currency_service/utils.py
+/src/auth_service/utils.py
+/src/auction_service/utils.py
+/src/api_gateway/utils.py
