--- a/src/api_gateway/Dockerfile
+++ b/src/api_gateway/Dockerfile
@@ -1,18 +1,12 @@
-# Use an official Python runtime as a parent image
 FROM python:3.9-slim
 
-# Set the working directory
-WORKDIR /PROGETTO
+WORKDIR /app
 
-# Copy requirements file and install dependencies
+COPY . .
+COPY ./src/utils.py .
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy the current directory contents into the container at /app
-COPY . .
-
-# Expose the necessary port
 EXPOSE 8000
 
-# Run the API gateway
-CMD ["python", "main.py"]
+CMD ["python","-u","main.py"]
