--- a/src/db_manager/Dockerfile
+++ b/src/db_manager/Dockerfile
@@ -1,11 +1,11 @@
 FROM python:3.9-slim
 
-WORKDIR /PROGETTO
+WORKDIR /app
+
+COPY . .
 
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
-
-COPY . .
 
 EXPOSE 8005
 
