--- a/src/gacha_service/Dockerfile
+++ b/src/gacha_service/Dockerfile
@@ -1,12 +1,12 @@
 FROM python:3.9-slim
 
-WORKDIR /PROGETTO
+WORKDIR /app
+
+COPY . .
 
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY . .
-
 EXPOSE 8002
 
-CMD ["python", "main.py"]
+CMD ["python","-u","main.py"]
