--- a/src/api_gateway/Dockerfile
+++ b/src/api_gateway/Dockerfile
@@ -2,9 +2,9 @@ FROM python:3.9-slim
 
 WORKDIR /app
 
-COPY . .
-COPY ./src/utils.py .
-COPY requirements.txt .
+COPY ./api_gateway .
+COPY utils.py /app/utils.py
+
 RUN pip install --no-cache-dir -r requirements.txt
 
 EXPOSE 8000
