--- a/src/api_gateway/Dockerfile
+++ b/src/api_gateway/Dockerfile
@@ -2,11 +2,11 @@ FROM python:3.9-slim
 
 WORKDIR /app
 
-COPY ./api_gateway .
-COPY utils.py /app/utils.py
+COPY ./api_gateway/main.py ./app.py
+COPY ./api_gateway/requirements.txt .
 
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install -r requirements.txt
 
 EXPOSE 8000
 
-CMD ["python","-u","main.py"]
+CMD ["flask", "run", "--host=0.0.0.0", "--port=8000", "--cert=/run/secrets/certificate", "--key=/run/secrets/key"]
