--- a/src/currency_service/Dockerfile
+++ b/src/currency_service/Dockerfile
@@ -2,10 +2,11 @@ FROM python:3.9-slim
 
 WORKDIR /app
 
-COPY ./currency_service .
+COPY ./currency_service/main.py ./app.py
+COPY ./currency_service/requirements.txt .
 
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install -r requirements.txt
 
 EXPOSE 8004
 
-CMD ["python","-u","main.py"]
+CMD ["flask", "run", "--host=0.0.0.0", "--port=8004", "--cert=/run/secrets/certificate", "--key=/run/secrets/key"]
