--- a/src/gacha_service/Dockerfile
+++ b/src/gacha_service/Dockerfile
@@ -2,11 +2,11 @@ FROM python:3.9-slim
 
 WORKDIR /app
 
-COPY ./gacha_service/ .
-COPY utils.py .
+COPY ./gacha_service/main.py ./app.py
+COPY ./gacha_service/requirements.txt .
 
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install -r requirements.txt
 
 EXPOSE 8002
 
-CMD ["python","-u","main.py"]
+CMD ["flask", "run", "--host=0.0.0.0", "--port=8002", "--cert=/run/secrets/certificate", "--key=/run/secrets/key"]
