--- a/src/market_service/Dockerfile
+++ b/src/market_service/Dockerfile
@@ -2,11 +2,11 @@ FROM python:3.9-slim
 
 WORKDIR /app
 
-COPY ./market_service .
-COPY utils.py .
+COPY ./market_service/main.py ./app.py
+COPY ./market_service/requirements.txt .
 
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install -r requirements.txt
 
 EXPOSE 8003
 
-CMD ["python","-u","main.py"]
+CMD ["flask", "run", "--host=0.0.0.0", "--port=8003", "--cert=/run/secrets/certificate", "--key=/run/secrets/key"]
