--- a/src/auth_service/requirements.txt
+++ b/src/auth_service/requirements.txt
@@ -1,4 +1,16 @@
-Flask==2.1.1
 Authlib==1.3.2
-mysql-connector-python==8.0.31
-werkzeug==2.0.3
+blinker==1.9.0
+certifi==2024.8.30
+cffi==1.17.1
+charset-normalizer==3.4.0
+click==8.1.7
+cryptography==43.0.3
+Flask==3.1.0
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.4
+MarkupSafe==3.0.2
+pycparser==2.22
+requests==2.32.3
+urllib3==2.2.3
+Werkzeug==3.1.3
