--- a/src/docker-compose.yaml
+++ b/src/docker-compose.yaml
@@ -12,6 +12,7 @@ services:
       - auth-service
       - currency-service
       - gacha-service
+      - admin-gacha-service
       - market-service
       - db-manager
     secrets:
@@ -47,6 +48,21 @@ services:
     secrets:
       - certificate
       - key
+  
+  admin-gacha-service:
+    build:
+      context: .
+      dockerfile: ./admin_gacha_service/Dockerfile
+    container_name: admin-gacha-service
+    ports:
+      - "8006:8006"
+    volumes:
+      - ./utils.py:/app/utils.py
+    depends_on:
+      - db-manager
+    secrets:
+      - certificate
+      - key      
 
   currency-service:
     build:
