--- a/src/auth_service/requirements.txt
+++ b/src/auth_service/requirements.txt
@@ -9,7 +9,7 @@ Flask==3.1.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.4
-jwt==1.3.1
+PyJWT==2.10.1
 MarkupSafe==3.0.2
 pycparser==2.22
 requests==2.32.3
