--- a/src/db_manager/requirements.txt
+++ b/src/db_manager/requirements.txt
@@ -5,7 +5,7 @@ cryptography==44.0.0
 Flask==3.1.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
-jwt==1.3.1
+PyJWT==2.10.1
 MarkupSafe==3.0.2
 mysql-connector==2.2.9
 mysql-connector-python==9.1.0
