--- a/src/market_service/Dockerfile_test
+++ b/src/market_service/Dockerfile_test
@@ -2,16 +2,15 @@ FROM python:3.12-slim
 
 WORKDIR /app
 
-COPY src/gacha_service/main*.py .
-COPY src/gacha_service/requirements.txt .
+COPY src/market_service/main*.py .
+COPY src/market_service/requirements.txt .
 COPY ./secrets/cert.pem /run/secrets/certificate
 COPY ./secrets/key.pem /run/secrets/key
 COPY src/utils.py ./utils.py
-COPY ./img ./img
 
 RUN pip install -r requirements.txt
 
-EXPOSE 5002
+EXPOSE 5003
 
 ENV FLASK_APP=main_test
-CMD ["flask", "run", "--host=0.0.0.0", "--port=5002", "--cert=/run/secrets/certificate", "--key=/run/secrets/key"]
+CMD ["flask", "run", "--host=0.0.0.0", "--port=5003", "--cert=/run/secrets/certificate", "--key=/run/secrets/key"]
