--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -14,15 +14,30 @@ jobs:
   build-and-test-services:
     runs-on: ubuntu-latest  # Esegue il job su un ambiente Ubuntu aggiornato
     steps:
-      - name: Checkout source code
-        uses: actions/checkout@v4  # Esegue il checkout del codice sorgente dal repository
+      - name: Check out the repository
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: ‘3.12'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Run tests
+        run: |
+          pip install pytest
+          pytest
 
       - name: Build Docker images for auth
         run: |
           docker build -t auth_image -f ./src/auth_service/Dockerfile_test .
       - name: run Docker images for auth
         run: |
-          docker run --name auth_cont -p 5001:5001 auth_image
+          docker run --name auth_cont -d -p 5001:5001 auth_image
 
       - name: Build Docker images for gacha
         run: |
@@ -30,7 +45,7 @@ jobs:
 
       - name: run Docker images for gacha
         run: |
-          docker run --name gacha_cont -p 5002:5002 gacha_image
+          docker run --name gacha_cont -d -p 5002:5002 gacha_image
 
       - name: Build Docker images for currency
         run: |
@@ -38,7 +53,7 @@ jobs:
 
       - name: run Docker images for currency
         run: |
-          docker run --name currency_cont -p 5004:5004 currency_image
+          docker run --name currency_cont -d -p 5004:5004 currency_image
 
       - name: Build Docker images for market
         run: |
@@ -46,7 +61,7 @@ jobs:
 
       - name: run Docker images for market
         run: |
-          docker run --name market_cont -p 5003:5003 market_image
+          docker run --name market_cont -d -p 5003:5003 market_image
 
       # Ferma e rimuove tutti i container Docker dopo i test
       - name: Tear down Docker containers after unit tests
