--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -1,18 +1,16 @@
-# Definisce il nome del workflow CI/CD per i microservizi, utile per identificare il workflow nella lista di GitHub Actions
 name: CI/CD Pipeline for Microservices
 
-# Specifica gli eventi che attiveranno il workflow
 on:
   push:
     branches:
-      - main  # Il workflow viene eseguito su ogni push al ramo 'main'
+      - main
   pull_request:
     branches:
-      - main  # Il workflow viene eseguito anche per ogni pull request verso il ramo 'main'
+      - main
 
 jobs:
   build-and-test-services:
-    runs-on: ubuntu-latest  # Esegue il job su un ambiente Ubuntu aggiornato
+    runs-on: ubuntu-latest
     steps:
       - name: Check out the repository
         uses: actions/checkout@v4
@@ -27,77 +25,78 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Run tests
-        run: |
-          pip install pytest
-          pytest
+      - name: Install Newman
+        run: npm install -g newman
 
-      - name: Build Docker images for auth
+      - name: Build and Test Auth Service
         run: |
           docker build -t auth_image -f ./src/auth_service/Dockerfile_test .
-      - name: run Docker images for auth
-        run: |
           docker run --name auth_cont -d -p 5001:5001 auth_image
+          newman run tests/auth_service.postman_collection.json --env-var baseUrl=http://localhost:5001
+          docker stop auth_cont && docker rm auth_cont
 
-      - name: Build Docker images for gacha
+      - name: Build and Test Gacha Service
         run: |
           docker build -t gacha_image -f ./src/gacha_service/Dockerfile_test .
-
-      - name: run Docker images for gacha
-        run: |
           docker run --name gacha_cont -d -p 5002:5002 gacha_image
+          newman run tests/gacha_service.postman_collection.json --env-var baseUrl=http://localhost:5002
+          docker stop gacha_cont && docker rm gacha_cont
 
-      - name: Build Docker images for currency
+      - name: Build and Test Currency Service
         run: |
           docker build -t currency_image -f ./src/currency_service/Dockerfile_test .
-
-      - name: run Docker images for currency
-        run: |
           docker run --name currency_cont -d -p 5004:5004 currency_image
+          newman run tests/currency_service.postman_collection.json --env-var baseUrl=http://localhost:5004
+          docker stop currency_cont && docker rm currency_cont
 
-      - name: Build Docker images for market
+      - name: Build and Test Market Service
         run: |
           docker build -t market_image -f ./src/market_service/Dockerfile_test .
-
-      - name: run Docker images for market
-        run: |
           docker run --name market_cont -d -p 5003:5003 market_image
-
-      # Ferma e rimuove tutti i container Docker dopo i test
-      - name: Tear down Docker containers after unit tests
-        if: always()
-        run: |
-          docker stop auth_cont gacha_cont currency_cont market_cont || true
-          docker rm auth_cont gacha_cont currency_cont market_cont || true
-
+          newman run tests/market_service.postman_collection.json --env-var baseUrl=http://localhost:5003
+          docker stop market_cont && docker rm market_cont
 
   integration-tests:
-    runs-on: ubuntu-latest  # Esegue il job su un ambiente Ubuntu aggiornato
-    needs: build-and-test-services  # Il job 'integration-tests' dipende dal completamento del job 'build-and-test-services'
+    runs-on: ubuntu-latest
+    needs: build-and-test-services
     steps:
-      - name: Checkout source code
-        uses: actions/checkout@v4  # Esegue il checkout del codice sorgente
+      - name: Check out the repository
+        uses: actions/checkout@v4
 
-      # Avvia i container per i test di integrazione
-      - name: Start Docker Compose services
+      - name: Install Newman
+        run: npm install -g newman
+
+      - name: Start Docker Compose Services
         run: docker-compose -f docker-compose.yaml up --build -d
 
-      # Esegui il refresh del DB
       - name: Refresh DB
         run: docker exec -i db mysql -u root -p root_password < ./db/ase.sql
+
+      - name: Run Integration Tests with Newman
+        run: newman run tests/integration.postman_collection.json --env-var baseUrl=http://localhost
+
+      - name: Tear down Docker Compose Services
+        if: always()
+        run: docker-compose -f docker-compose.yaml down
+
+  performance-tests:
+    runs-on: ubuntu-latest
+    needs: build-and-test-services
+    steps:
+      - name: Check out the repository
+        uses: actions/checkout@v4
 
       - name: Install Locust
         run: |
           python3 -m pip install --upgrade pip
           pip install locust
 
-      - name: CD
-        run: cd tests 
-    
-      - name: locust
-        run: locust                
+      - name: Start Docker Compose Services
+        run: docker-compose -f docker-compose.yaml up --build -d
 
-# Ferma e rimuove tutti i container Docker dopo aver eseguito i test di integrazione
-      - name: Tear down Docker Compose services
+      - name: Run Locust Performance Tests
+        run: locust -f tests/locustfile.py --headless -u 100 -r 10 --run-time 10m --host=http://localhost
+
+      - name: Tear down Docker Compose Services
         if: always()
-        run: docker-compose -f docker-compose.yaml down  
+        run: docker-compose -f docker-compose.yaml down
