--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -1,16 +1,18 @@
+# Definisce il nome del workflow CI/CD per i microservizi, utile per identificare il workflow nella lista di GitHub Actions
 name: CI/CD Pipeline for Microservices
 
+# Specifica gli eventi che attiveranno il workflow
 on:
   push:
     branches:
-      - main
+      - main  # Il workflow viene eseguito su ogni push al ramo 'main'
   pull_request:
     branches:
-      - main
+      - main  # Il workflow viene eseguito anche per ogni pull request verso il ramo 'main'
 
 jobs:
   build-and-test-services:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest  # Esegue il job su un ambiente Ubuntu aggiornato
     steps:
       - name: Check out the repository
         uses: actions/checkout@v4
@@ -18,7 +20,7 @@ jobs:
       - name: Build Docker images for auth
         run: |
           docker build -t auth_image -f ./src/auth_service/Dockerfile_test .
-      - name: Run Docker images for auth
+      - name: run Docker images for auth
         run: |
           docker run --name auth_cont -d -p 5001:5001 auth_image
 
@@ -26,7 +28,7 @@ jobs:
         run: |
           docker build -t gacha_image -f ./src/gacha_service/Dockerfile_test .
 
-      - name: Run Docker images for gacha
+      - name: run Docker images for gacha
         run: |
           docker run --name gacha_cont -d -p 5002:5002 gacha_image
 
@@ -34,7 +36,7 @@ jobs:
         run: |
           docker build -t currency_image -f ./src/currency_service/Dockerfile_test .
 
-      - name: Run Docker images for currency
+      - name: run Docker images for currency
         run: |
           docker run --name currency_cont -d -p 5004:5004 currency_image
 
@@ -42,57 +44,13 @@ jobs:
         run: |
           docker build -t market_image -f ./src/market_service/Dockerfile_test .
 
-      - name: Run Docker images for market
+      - name: run Docker images for market
         run: |
           docker run --name market_cont -d -p 5003:5003 market_image
 
+      # Ferma e rimuove tutti i container Docker dopo i test
       - name: Tear down Docker containers after unit tests
         if: always()
         run: |
           docker stop auth_cont gacha_cont currency_cont market_cont || true
           docker rm auth_cont gacha_cont currency_cont market_cont || true
-
-  integration-tests:
-    runs-on: ubuntu-latest
-    needs: build-and-test-services
-    steps:
-      - name: Check out the repository
-        uses: actions/checkout@v4
-
-      - name: Install Newman
-        run: npm install -g newman
-
-      - name: Start Docker Compose Services
-        run: docker-compose -f docker-compose.yaml up --build -d
-
-      - name: Refresh Database
-        run: docker exec -i db mysql -u root -p root_password < ./db/ase.sql
-
-      - name: Run Integration Tests
-        run: newman run tests/integration.postman_collection.json --env-var baseUrl=http://localhost
-
-      - name: Tear down Docker Compose Services
-        if: always()
-        run: docker-compose -f docker-compose.yaml down
-
-  performance-tests:
-    runs-on: ubuntu-latest
-    needs: build-and-test-services
-    steps:
-      - name: Check out the repository
-        uses: actions/checkout@v4
-
-      - name: Install Locust
-        run: |
-          python3 -m pip install --upgrade pip
-          pip install locust
-
-      - name: Start Docker Compose Services
-        run: docker-compose -f docker-compose.yaml up --build -d
-
-      - name: Run Locust Performance Tests
-        run: locust -f tests/locustfile.py --headless -u 100 -r 10 --run-time 10m --host=http://localhost
-
-      - name: Tear down Docker Compose Services
-        if: always()
-        run: docker-compose -f docker-compose.yaml down
