--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -65,7 +65,7 @@ jobs:
           sudo apt-get install -y docker-compose
 
       - name: Start Docker Compose Services
-        run: docker-compose -f docker-compose.yaml up --build -d
+        run: docker-compose up --build -d
 
       - name: Refresh Database
         run: docker exec -i db mysql -u root -p root_password < ./db/ase.sql
